2010-12-17  Anton Muhin  <antonm@chromium.org>

        Reviewed by Yury Semikhatsky.

        [v8] The last portion of CSS GC work: fixing fast/dom/StyleSheet/gc-stylesheet-wrapper.html
        https://bugs.webkit.org/show_bug.cgi?id=51121

        Properly group style elements of HTML links, style elements and processing instructions.

        * bindings/v8/V8GCController.cpp:
        (WebCore::NodeGrouperVisitor::visitDOMWrapper):
        (WebCore::NodeGrouperVisitor::addDOMObjectToGroup):

2010-12-17  Pavel Podivilov  <podivilov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: [REGRESSION] scripts in scripts panel are not updated on reload.
        https://bugs.webkit.org/show_bug.cgi?id=51101

        * inspector/front-end/ResourceManager.js:
        (WebInspector.ResourceTreeModel.prototype.didCommitLoadForFrame):

2010-12-17  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Laszlo Gombos.

        The inspector does not compile without JAVASCRIPT_DEBUGGER
        https://bugs.webkit.org/show_bug.cgi?id=51246

        Fix the build, m_extraHeaders does not depend on JAVASCRIPT_DEBUGGER.

        * inspector/InspectorController.h:

2010-12-17  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: clear extra/override headers when front-end is closed
        https://bugs.webkit.org/show_bug.cgi?id=51244

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::disconnectFrontend):
        (WebCore::InspectorController::willSendRequest):

2010-12-17  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: [REGRESSION] Cmd (Ctrl) + G does not search next in Scripts panel.
        https://bugs.webkit.org/show_bug.cgi?id=50893

        Now Mac shortcuts are:
        - Cmd F/G = find / next
        - Cmd L = go to line

        Win/Linux:
        - Ctrl+G = go to line
